--- a/Designer/Themes/ProjectListItemTemplates.xaml
+++ b/Designer/Themes/ProjectListItemTemplates.xaml
@@ -16,8 +16,8 @@
 	<SolidColorBrush x:Key="ServiceContainerColor" Color="#AA006600" />
 	<SolidColorBrush x:Key="DataContainerColor" Color="#AA006699" />
 	<SolidColorBrush x:Key="EnumContainerColor" Color="#AA0033FF" />
-	<SolidColorBrush x:Key="BindingContainerColor" Color="#AA660000" />
-	<SolidColorBrush x:Key="HostContainerColor" Color="#AA993300" />
+	<SolidColorBrush x:Key="HostContainerColor" Color="#AA660000" />
+	<SolidColorBrush x:Key="BindingContainerColor" Color="#AA993300" />
 
 	<ItemsPanelTemplate x:Key="ProjectListPanelTemplate">
 		<StackPanel Orientation="Vertical" IsItemsHost="True" />
@@ -109,7 +109,7 @@
 						<Border x:Name="PART_Border" Grid.ColumnSpan="2" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="0" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" />
 						<Border x:Name="Overlay" Grid.ColumnSpan="2" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Padding="5,0,0,0" />
 						<ContentPresenter Grid.Column="0" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
+						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButton}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
 							<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 						</Button>
 					</Grid>
@@ -180,7 +180,7 @@
 						<Border x:Name="PART_Border" Grid.ColumnSpan="2" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="0" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" />
 						<Border x:Name="Overlay" Grid.ColumnSpan="2" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Padding="5,0,0,0" />
 						<ContentPresenter Grid.Column="0" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
+						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButton}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
 							<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 						</Button>
 					</Grid>
@@ -252,7 +252,7 @@
 						<Border x:Name="PART_Border" Grid.ColumnSpan="2" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="0" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" />
 						<Border x:Name="Overlay" Grid.ColumnSpan="2" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Padding="5,0,0,0" />
 						<ContentPresenter Grid.Column="0" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
+						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButton}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
 							<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 						</Button>
 					</Grid>
@@ -323,7 +323,7 @@
 						<Border x:Name="PART_Border" Grid.ColumnSpan="2" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="0" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" />
 						<Border x:Name="Overlay" Grid.ColumnSpan="2" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Padding="5,0,0,0" />
 						<ContentPresenter Grid.Column="0" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
+						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButton}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
 							<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 						</Button>
 					</Grid>
@@ -532,7 +532,7 @@
 						<Border x:Name="PART_Border" Grid.ColumnSpan="2" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="0" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" />
 						<Border x:Name="Overlay" Grid.ColumnSpan="2" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Padding="5,0,0,0" />
 						<ContentPresenter Grid.Column="0" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
+						<Button x:Name="Delete" Visibility="Collapsed" Grid.Column="1" Grid.RowSpan="2" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButton}" Command="{x:Static local:Navigator.DeleteCommand}" CommandParameter="{Binding}" >
 							<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 						</Button>
 					</Grid>
