--- a/Designer/Interface/Data/Data.xaml
+++ b/Designer/Interface/Data/Data.xaml
@@ -38,10 +38,12 @@
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*" />
 				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
-			<ToggleButton Content="Enable Concurrently Mutable Data" IsChecked="{Binding Path=OpenType.DCMEnabled}" Margin="5" Grid.Column="0" Grid.Row="0" />
-			<Label Content="Change Message Batch Interval:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="1" />
-			<c1:C1NumericBox Value="{Binding Path=OpenType.DCMBatchCount}" Format="G10" Margin="202,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateBatchSize" ValueChanged="UpdateBatchSize_ValueChanged" Grid.Column="1" FontSize="10pt" ToolTip="Specify the number of changes to the this object before a change message is sent." />
+			<ToggleButton Content="Enable Concurrently Mutable Data" IsChecked="{Binding Path=OpenType.CMDEnabled}" Margin="5" Grid.Column="0" Grid.Row="0" />
+			<ToggleButton Content="Enable Data Revision Exchange" IsChecked="{Binding Path=OpenType.DREEnabled}" IsEnabled="{Binding Path=OpenType.CMDEnabled}" Margin="5" Grid.Column="1" Grid.Row="0" />
+			<Label Content="Revision Message Batch Interval:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="2" />
+			<c1:C1NumericBox Value="{Binding Path=OpenType.DREBatchCount}" IsEnabled="{Binding Path=OpenType.DREEnabled}" Format="G10" Margin="202,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateBatchSize" ValueChanged="UpdateBatchSize_ValueChanged" Grid.Column="2" FontSize="10pt" ToolTip="Specify the number of changes to the this object before a change message is sent." />
 		</Grid>
 		<Grid Name="OptionsGrid" Grid.Row="4" Margin="0,5,0,0" >
 			<Grid.ColumnDefinitions>
